--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "firebase-admin": "*",
-    "express": "*"
+    "express": "*",
+    "fs": "*"
   }
 }
